Cleared syntax error
center and all

--- a/clicker.html
+++ b/clicker.html
@@ -1,6 +1,4 @@
 <html>
-<center>
-<br/><br/><br/>
 <head>
 <style>
 .adsbutton {
@@ -51,6 +49,8 @@ function headToAds(){
 </script>
 </head>
 <body>
+<center>
+<br/><br/><br/>
 <span id="message">You Have <span id="countdown" style="font-weight: bold;">10</span> seconds left </span>
 <div id="clickbutton">
 <input value="Click Me" style="width:300px; height:400px; background-color:red;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
@@ -61,5 +61,6 @@ function headToAds(){
 <div id="clicker" style="display: block-inline; width:200px; height:50px; background-color:red;text-align:center; font-size:xx-large;  font-family:sans-serif;color:white;">
 Your Score
 </div>
+</center>
 </body>
 </html>
