--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function getClick(clicks) {
 	document.getElementById('clicker').innerHTML = clicks
 }
 function headToAds(){
-	window.open('https://facebook.com/JustinWithJesus','_blank');
+	window.open('http://framexprezz.blogspot.in/','_blank');
 }
 </script>
 </head>
@@ -60,6 +60,10 @@ function headToAds(){
 </div>
 <div id="clicker" style="display: block-inline; width:200px; height:50px; background-color:red;text-align:center; font-size:xx-large;  font-family:sans-serif;color:white;">
 Your Score
+</div>
+<a href="javascript:{ flag=0; clicks=0; }"
+<div id="reset" style="display: block-inline; width:200px; height:50px; background-color:red;text-align:center; font-size:xx-large;  font-family:sans-serif;color:white;">
+Retry
 </div>
 </center>
 </body>
