--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@ function resetall() {
 </script>
 </head>
 <body style="font-family:sans-serif; background-color:#bdc3c7; ">
-<iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fapps.facebook.com%2Fbestclicker%2F&width&layout=box_count&action=like&show_faces=false&share=false&height=65&appId=259826257528588" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:65px;" allowTransparency="true"></iframe>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=259826257528588";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-like" data-href="https://apps.facebook.com/bestclicker/" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
 <center>
 <span id="message" style="font-size:x-large;">You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="clickbutton">
