--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ function resetall() {
 function submitscore() {
 FB.ui({
   method: 'feed',
-  link: 'https://apps.facebook.com/bestclicker/',
+  link: 'http://rawgithub.com/highborg-justin/fbgame/master/index.html',
   caption: 'Your scored '+clicks+' points',
 }, function(response){});
 }
