--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ function resetall() {
    div = document.getElementById('adsbutton').style.display = 'none';
 }
 function submitscore() {
+clicks--;
 FB.ui({
   method: 'feed',
   link: 'http://rawgithub.com/highborg-justin/fbgame/master/index.html',
