--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@ clicks--;
 FB.ui({
   method: 'feed',
   link: 'http://rawgithub.com/highborg-justin/fbgame/master/index.html',
-  caption: 'Your scored '+clicks+' points',
+  message: 'I\'ve scored '+clicks+' points',
+  caption: 'I\'ve scored '+clicks+' points',
 }, function(response){});
 }
 </script>
