--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ FB.ui({
 }
 </script>
 </head>
-<body style="font-family:sans-serif; background-color:#bdc3c7; ">
+<body style="font-family:sans-serif; background-color:#FCDBFF;; ">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
