--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ clicks--;
 FB.ui({
   method: 'feed',
   link: 'http://rawgithub.com/highborg-justin/fbgame/master/index.html',
-  caption: 'I\'ve scored '+clicks+' points',
+  caption: 'I\'ve scored '+clicks+' points'
 }, function(response){});
 }
 </script>
