--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta property="og:title"           content="Beat Me on Best Clicker" /> 
 <meta property="og:url"             content="http://rawgithub.com/highborg-justin/fbgame/master/index.html" /> 
 <meta property="og:description"     content="By HighBorgzZ" />
-<meta property="og:type"            content="Beat Me facebook game" />
+<meta property="og:type"            content="Website" />
 <meta property="og:image"           content="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc1/t31.0-8/p720x720/1957865_4056810354502_941597101_o.jpg" /> 
 
 <style>
