--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ function appreq(){
 	
 </script>
 </head>
-<body style="font-family:sans-serif; background-color:#FCDBFF; " onload="appreq()">
+<body style="font-family:sans-serif; background-color:#FCDBFF; ">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -94,7 +94,7 @@ function appreq(){
 <input value="Click Me" style="width:300px; height:400px; background-color:#2c3e50;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
 </div>
 <div id="adsbutton" class="adsbutton">
-<input value="Game Over" style="width:300px; height:400px; background-color:#c0392b;text-align:center; font-size:x-large; color:white;" type="button" <!--onclick="headToAds();-->">
+<input value="Game Over" style="width:300px; height:400px; background-color:#c0392b;text-align:center; font-size:x-large; color:white;" type="button"  onclick="appreq()" <!--onclick="headToAds();"-->>
 </div>
 <input value="Try Again" style="display: inline; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="resetall();">
 <input id="clicker" value="Your Score" style="display: inline; width:200px; height:50px; background-color:#2980b9;text-align:center; font-size:x-large; color:white;" type="button" >
