--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@ function appreq(){
 <input value="Try Again" style="display: inline; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="resetall();">
 <input id="clicker" value="Your Score" style="display: inline; width:200px; height:50px; background-color:#2980b9;text-align:center; font-size:x-large; color:white;" type="button" >
 <input value="Submit!" style="display: inline; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="submitscore();">
-
+<h1>Extra Large with Custom Text</h1>
+<fb:login-button size="xlarge"
+                 onlogin="require('./log').info('onlogin callback')">
+ Connect and Play
+</fb:login-button>
 </body>
 </html>
