--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ FB.ui({
 }
 function appreq(){
     FB.ui({method: 'apprequests',
-        message: 'YOUR_MESSAGE_HERE'
+        message: 'Challenge your friends in Beat Me'
     }, requestCallback);
 }
 	
@@ -89,6 +89,10 @@ function appreq(){
 }(document, 'script', 'facebook-jssdk'));</script>
 <div class="fb-like" data-href="https://apps.facebook.com/bestclicker/" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
 <center>
+<fb:login-button size="xlarge"
+                 onlogin="require('./log').info('onlogin callback')">
+ Connect and Play
+</fb:login-button>
 <span id="message" style="font-size:x-large;">You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="clickbutton">
 <input value="Click Me" style="width:300px; height:400px; background-color:#2c3e50;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
@@ -99,10 +103,5 @@ function appreq(){
 <input value="Try Again" style="display: inline; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="resetall();">
 <input id="clicker" value="Your Score" style="display: inline; width:200px; height:50px; background-color:#2980b9;text-align:center; font-size:x-large; color:white;" type="button" >
 <input value="Submit!" style="display: inline; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="submitscore();">
-<h1>Extra Large with Custom Text</h1>
-<fb:login-button size="xlarge"
-                 onlogin="require('./log').info('onlogin callback')">
- Connect and Play
-</fb:login-button>
 </body>
 </html>
