--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ FB.api(
     }, requestCallback);
    }
   }
-}
 );
+}
 function startTimer(secs){
 timeInSecs = parseInt(secs)-1;
 ticker = setInterval("tick()",1000);   // every second
@@ -100,7 +100,7 @@ FB.ui({
 <fb:login-button size="xlarge"
                  onlogin="require('./log').info('onlogin callback')">
  Connect and Play
-</fb:login-button>
+</fb:login-button><br/>
 <span id="message" style="font-size:x-large;">You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="clickbutton">
 <input value="Click Me" style="width:300px; height:400px; background-color:#2c3e50;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
