--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@ FB.ui({
   caption: 'I\'ve scored '+clicks+' points'
 }, function(response){});
 }
+ FB.login(function(response) {
+   // handle the response
+ }, {scope: 'email,user_likes','publish_actions'});
 
 	
 </script>
