--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ FB.ui({
 <center>
 <div class="fb-login-button" data-perms="publish_actions">
         Login with Facebook
-</div>><br/>
+</div><br/>
 <span id="message" style="font-size:x-large;">You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="clickbutton">
 <input value="Click Me" style="width:300px; height:400px; background-color:#2c3e50;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
