--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 .signbutton {
  display:block;
 }
+.menu {
+ display:none;
+}
 
 </style>
  <script type="text/javascript">
@@ -46,6 +49,7 @@ function fbl() {
      console.log('Welcome!  Fetching your information.... ');
      FB.api('/me', function(response) {
       div = document.getElementById('clickbutton').style.display = 'block';
+	        div = document.getElementById('menu').style.display = 'block';
       div = document.getElementById('signbutton').style.display = 'none';
      });
    } else {
@@ -117,21 +121,21 @@ FB.ui({
 }(document, 'script', 'facebook-jssdk'));</script>
 <div class="fb-like" data-href="https://apps.facebook.com/bestclicker/" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
 <center>
-<div class="fb-login-button" data-perms="publish_actions">
-        Login with Facebook
-</div><br/>
+<br/>
 <span id="message" style="font-size:x-large;">You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="signbutton" class="signbutton">
 <input value="Sign In with facebook" style="width:300px; height:400px; background-color:#4c66a4;text-align:center; font-size:x-large; color:white;" type="button"  onclick="fbl();">
 </div>
-<div id="clickbutton">
+<div id="clickbutton" class="clickbutton">
 <input value="Click Me" style="width:300px; height:400px; background-color:#2c3e50;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
 </div>
 <div id="adsbutton" class="adsbutton">
 <input value="Game Over" style="width:300px; height:400px; background-color:#c0392b;text-align:center; font-size:x-large; color:white;" type="button"  onclick="appreq();">
 </div>
+<div class="menu">
 <input value="Try Again" style="display: inline; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="resetall();">
 <input id="clicker" value="Your Score" style="display: inline; width:200px; height:50px; background-color:#2980b9;text-align:center; font-size:x-large; color:white;" type="button" >
 <input value="Submit!" style="display: inline; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="submitscore();">
+</div>
 </body>
 </html>
