--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ function getClick(clicks) {
 	document.getElementById('clicker').value = clicks;
 }
 function headToAds() {
-	window.open('https://www.facebook.com/dialog/apprequests?app_id=259826257528588&message=Beat%20Me%20on%20Best%20Clicker!&redirect_uri=https://apps.facebook.com/bestclicker/ ');
+	window.open('https://www.facebook.com/dialog/apprequests?app_id=259826257528588&message=Beat%20Me%20on%20Best%20Clicker!&redirect_uri=https://apps.facebook.com/bestclicker/ ','_self');
 }
 function resetall() {
    flag=0;
