--- a/index.html
+++ b/index.html
@@ -123,8 +123,21 @@ function getClick(clicks) {
 	}
 	document.getElementById('clicker').value = clicks;
 }
-function headToAds() {
-	window.open('https://www.facebook.com/dialog/apprequests?app_id=259826257528588&message=Beat%20Me%20on%20Best%20Clicker!&redirect_uri=https://apps.facebook.com/bestclicker/ ','_self');
+function inviteall() {
+	FB.api(
+    "/me/apprequests",
+    "POST",
+    {
+        "object": {
+            "message": "I Challenge you to Beat My score"
+        }
+    },
+    function (response) {
+      if (response && !response.error) {
+        /* handle the result */
+      }
+    }
+);
 }
 function resetall() {
    flag=0;
