--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function fbl() {
 		div = document.getElementById('signbutton').style.display = 'none';
 		div = document.getElementById('clickbutton').style.display = 'block';
 		div = document.getElementById('menu').style.display = 'block';
-		headToAds();
+		inviteall();
      });
    } else {
      console.log('User cancelled login or did not fully authorize.');
