--- a/index.html
+++ b/index.html
@@ -28,54 +28,7 @@
 var timeInSecs;
 var ticker;
 var flag=0;
-var div
- function renderMFS() {
- // First get the list of friends for this user with the Graph API
- FB.api('/me/friends', function(response) {
-   var container = document.getElementById('mfs');
-   var mfsForm = document.createElement('form');
-   mfsForm.id = 'mfsForm';
-
-   // Iterate through the array of friends object and create a checkbox for each one.
-   for(var i = 0; i < Math.min(response.data.length, 10); i++) {
-     var friendItem = document.createElement('div');
-     friendItem.id = 'friend_' + response.data[i].id;
-     friendItem.innerHTML = '<input type="checkbox" name="friends" value="'
-       + response.data[i].id
-       + '" checked />' + response.data[i].name;
-       mfsForm.appendChild(friendItem);
-     }
-     container.appendChild(mfsForm);
-
-     // Create a button to send the Request(s)
-     var sendButton = document.createElement('input');
-     sendButton.type = 'button';
-     sendButton.value = 'Send Request';
-     sendButton.onclick = appreq;
-     mfsForm.appendChild(sendButton);
-   });
- }        
-function appreq(){
-   // Get the list of selected friends
-   var sendUIDs = '';
-   var mfsForm = document.getElementById('mfsForm');
-     for(var i = 0; i < mfsForm.friends.length; i++) {
-       if(mfsForm.friends[i].checked) {
-         sendUIDs += mfsForm.friends[i].value + ',';
-       }
-     }
-
-   // Use FB.ui to send the Request(s)
-   FB.ui({method: 'apprequests',
-     to: sendUIDs,
-     title: 'Beat Me on Best Clicker',
-     message: 'Check out this Awesome App!',
-   }, callback);
- }
-
- function callback(response) {
-   console.log(response);
- }
+var div;
 
 function fbl() {
  FB.login(function(response) {
@@ -93,6 +46,34 @@ function fbl() {
  },{scope: 'publish_actions'});
  }
  
+ function submitscore() {
+ FB.login(function(response) {
+   if (response.authResponse) {
+    console.log('Welcome!  Fetching your information.... ');
+    FB.api('/me', function(response) {
+	clicks--;
+	FB.api(
+    "/me/feed",
+    "POST",
+    {
+        "beatme:score": {
+            "message": "I have scored "+clicks+" points on Best Clicker! Beat Me if you can!",
+            "link": "https://apps.facebook.com/bestclicker/"
+        }
+    },
+    function (response) {
+      if (response && !response.error) {
+        div = document.getElementById('adsclick').value = 'Score Submitted';
+      }
+    }
+	);
+     });
+   } else {
+     console.log('User cancelled login or did not fully authorize.');
+   }
+ },{scope: 'publish_actions'});
+ } 
+
 function startTimer(secs){
 timeInSecs = parseInt(secs)-1;
 ticker = setInterval("tick()",1000);   // every second
@@ -147,24 +128,6 @@ function resetall() {
    div = document.getElementById('adsbutton').style.display = 'none';
    div = document.getElementById('countdown').innerHTML = '10';
 }
-function submitscore() {
-clicks--;
-FB.api(
-    "/me/feed",
-    "POST",
-    {
-        "object": {
-            "message": "I have scored "+clicks+" points on Best Clicker! Beat Me if you can!",
-            "link": "https://apps.facebook.com/bestclicker/"
-        }
-    },
-    function (response) {
-      if (response && !response.error) {
-        div = document.getElementById('adsclick').value = 'Score Submitted';
-      }
-    }
-);
-}
 
 </script>
 </head>
@@ -182,7 +145,7 @@ FB.api(
 <br/>
 <span id="message" style="font-size:x-large;">You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="signbutton" class="signbutton">
-<input value="Sign In with facebook" style="width:300px; height:400px; background-color:#4c66a4;text-align:center; font-size:x-large; color:white;" type="button"  onclick="fbl();">
+<input value="Start Playing!" style="width:300px; height:400px; background-color:#4c66a4;text-align:center; font-size:x-large; color:white;" type="button"  onclick="fbl();">
 </div>
 <div id="clickbutton" class="clickbutton">
 <input value="Click Me" style="width:300px; height:400px; background-color:#2c3e50;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
