--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function fbl() {
     {
         "beatme:score": {
 			"score":clicks,
-			"image":"https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc1/t1.0-9/1958382_4056810354502_941597101_n.jpg"
+			"image":"https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc1/t1.0-9/1958382_4056810354502_941597101_n.jpg",
             "message": "I have scored "+clicks+" points on Best Clicker! Beat Me if you can!",
             "link": "https://apps.facebook.com/bestclicker/"
         }
