--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ function fbl() {
  FB.login(function(response) {
    if (response.authResponse) {
     console.log('Welcome!  Fetching your information.... ');
+		clicks--;
     FB.api('/me', function(response) {
-	clicks--;
 	FB.api(
-    "/me/feed",
+    "/feed",
     "POST",
     {
         "beatme:score": {
