--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ function fbl() {
 		clicks--;
     FB.api('/me', function(response) {
 	FB.api(
-    "/feed",
+    "/me/feed",
     "POST",
     {
         "beatme:score": {
