--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@ clicks--;
     var retVal = true;
     if (result) {
         console.log('Facebook API: Send Status: Success');
+        div = document.getElementById('adsbutton').value = 'Score Submitted!';
     }
     else {
         console.log('Facebook API: Send Status: Failed');
@@ -182,7 +183,7 @@ clicks--;
 <br/>
 <span id="message" style="font-size:x-large;">You have <span id="countdown" style="font-weight: bold;">10</span> seconds left! </span>
 <div id="signbutton" class="signbutton">
-<input value="Sign In with facebook" style="width:300px; height:400px; background-color:#4c66a4;text-align:center; font-size:x-large; color:white;" type="button"  onclick="fbl();">
+<input value="Click to Start!" style="width:300px; height:400px; background-color:#4c66a4;text-align:center; font-size:x-large; color:white;" type="button"  onclick="fbl();">
 </div>
 <div id="clickbutton" class="clickbutton">
 <input value="Click Me" style="width:300px; height:400px; background-color:#2c3e50;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
