--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ clicks--;
         retVal = false;
     } return retVal;
   });
-  div = document.getElementById('adsbutton').value = 'Score Submitted!';
+  document.getElementById('adsbutton').value = "Score Submitted!";
 }
 
 </script>
