--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ clicks--;
 
 </script>
 </head>
-<body style="font-family:sans-serif; background-color:#FCDBFF; ">
+<body style="font-family:sans-serif; ">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
