--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <style>
 .body{
- background-image:url('http://s16.postimg.org/4ov4h6w11/gitbg.jpg');
+ background-image:url(http://s16.postimg.org/4ov4h6w11/gitbg.jpg);
  background-size:cover;
 }
 .adsbutton {
