--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <meta property="og:image"           content="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-frc1/t31.0-8/p720x720/1957865_4056810354502_941597101_o.jpg" /> 
 
 <style>
-.body{
- background-image:url(http://s16.postimg.org/4ov4h6w11/gitbg.jpg);
- background-size:cover;
+body
+{
+background:url(http://s16.postimg.org/4ov4h6w11/gitbg.jpg);
+background-size:cover;
 }
 .adsbutton {
  display:none;
