--- a/index.html
+++ b/index.html
@@ -135,17 +135,11 @@ var smar=mar.toString();
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
 }
 function inviteall() {
-	FB.api(
-    "/me/apprequests",
-    "POST",
-    {
-        "object": {
-            "message": "I Challenge you to Beat My score"
-        }
-    },
+FB.api(
+    "/me/friends?limit=25",
     function (response) {
       if (response && !response.error) {
-        /* handle the result */
+          console.log('Reached There!');
       }
     }
 );
