--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ FB.api(
     function (response) {
       if (response && !response.error) {
           console.log('Reached There!');
+          console.log(data.row[1].id+" "+data.row[2].id);
       }
     }
 );
