--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@ var smar=mar.toString();
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
 }
 function inviteall() {
-FB.api(
-    "/me/friends?limit=25",
-    function (response) {
-      if (response && !response.error) {
-          console.log('Reached There!');
-          console.log(data.row[1].id+" "+data.row[2].id);
-      }
-    }
-);
+ FB.api('/me/friends', function(response) {
+              if(response.data) {
+               $.each(response.data,function(index,friend) {
+                   alert(friend.name + ' has id:' + friend.id);
+               });
+              } else {
+                  alert("Error!");
+                  }
+             });
 }
 function resetall() {
    flag=0;
