--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@ var smar=mar.toString();
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
 }
 function inviteall() {
- FB.api('/me/friends', function(response) {
+ FB.api('/me/friends?limit=10', function(response) {
               if(response.data) {
-               $.each(response.data,function(index,friend) {
+               foreach(response.data,function(index,friend) {
                    alert(friend.name + ' has id:' + friend.id);
                });
               } else {
