--- a/index.html
+++ b/index.html
@@ -135,15 +135,22 @@ var smar=mar.toString();
 	document.getElementById('clickbutton').style.marginLeft= smar + 'px';
 }
 function inviteall() {
- FB.api('/me/friends?limit=10', function(response) {
+ var fid[25];
+ var cnt=0;	
+ FB.api('/me/friends?limit=25', function(response) {
               if(response.data) {
                response.data.forEach(function(friend) {
-                   alert(friend.name + ' has id:' + friend.id);
+                   fid[cnt]=friend.id;
+                   cnt++;
                });
               } else {
                   alert("Error!");
                   }
              });
+  FB.ui({method: 'apprequests',
+      message: 'I challenge you to Beat Me on Best Clicker,
+      to: fid[],
+    }, requestCallback);
 }
 function resetall() {
    flag=0;
