--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@ function inviteall() {
                   }
              });
   FB.ui({method: 'apprequests',
-      message: 'I challenge you to Beat Me on Best Clicker,
-      to: fid[],
+      message: 'I challenge you to Beat Me on Best Clicker',
+      to: document.write(fb.join(","));,
     }, requestCallback);
 }
 function resetall() {
@@ -202,7 +202,7 @@ clicks--;
 <input value="Click Me" style="width:300px; height:400px; background-color:#2c3e50;text-align:center; font-size:x-large; color:white;" type="button" onclick="getClick(clicks++)">
 </div>
 <div id="adsbutton" class="adsbutton">
-<input value="Game Over" id="adsclick" style="width:300px; height:400px; background-color:#c0392b;text-align:center; font-size:x-large; color:white;" type="button"  onclick="inviteall();">
+<input value="Game Over" id="adsclick" style="width:300px; height:400px; background-color:#c0392b;text-align:center; font-size:x-large; color:white;" type="button"  onclick="headToAds();">
 </div>
 <div class="menu" id="menu">
 <input value="Try Again" style="display: inline; width:200px; height:50px; background-color:#e74c3c;text-align:center; font-size:x-large; color:white;" type="button" onclick="resetall();">
