--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ var fid = new Array();
                   console.log('Error');
                   }
              });
-            flist=" \'"+fid.join("\',\'")+"\'";
+            flist=document.fid.join(",");
   console.log(flist);
   FB.ui({method: 'apprequests',
       message: 'I challenge you to Beat Me on Best Clicker',
