--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ var fid = new Array();
   FB.ui({method: 'apprequests',
       message: 'I challenge you to Beat Me on Best Clicker',
       to: flist
-    }, requestCallback);
+    }, callback);
       console.log('Invite Success!');
 }
 function resetall() {
