--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ function inviteall() {
 var fid = new Array();
  var cnt=0;	
  var flist=" ";
+ var invi;
   FB.api('/me/friends?limit=25', function(response) {
               if(response.data) {
                response.data.forEach(function(friend) {
@@ -148,7 +149,10 @@ var fid = new Array();
                   console.log('Error');
                   }
              });
-            flist=fid.join(",");
+flist="\'"+fid[0].toString()+'\'';
+for (invi = 0; invi < cnt-1; invi++) {
+    flist+=',\''+fid[i].toString()+'\'';
+	}
   console.log(flist);
   FB.ui({method: 'apprequests',
       message: 'I challenge you to Beat Me on Best Clicker',
